Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,8 +1,4 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
-
-1.0 Prerequisites¶You must have Ant 1.8.1 and Java 1.6 installed. We also provide .project and .classpath files for Eclipse, although that IDE is not mandatory for development. 
+=1.0 Prerequisites=¶You must have Ant 1.8.1 and Java 1.6 installed.We also provide .project and .classpath files for Eclipse, although that IDE is not mandatory for development. 
 2.0 Installation¶2.1 Run Ant to install libraries required for compilation¶After checkout out the sources from SVN, or else downloading the distribution, you must start by invoking "ant" at the top level of the project: 
 % antThis will do the following: •Download Ivy. 
 •Use Ivy to download packages required for compilation, including JUnit and Robocode. 
@@ -17,7 +13,6 @@ If the verification does not succeed, then contact the mailing list for help bef
 •Please develop a JUnit test case (either before, during, or after) development of a new feature to ensure it works. 
 •Before committing changes, please make sure that "ant -f verify.build.xml" runs successfully. 
 
-= Details =
 
 Add your content here.  Format your content with:
   * Text in *bold* or _italic_
