--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,20 +1,1 @@
-=1.0 Prerequisites=You must have Ant 1.8.1 and Java 1.6 installed.We also provide .project and .classpath files for Eclipse, although that IDE is not mandatory for development. 
-2.0 Installation¶2.1 Run Ant to install libraries required for compilation¶After checkout out the sources from SVN, or else downloading the distribution, you must start by invoking "ant" at the top level of the project: 
-% antThis will do the following: •Download Ivy. 
-•Use Ivy to download packages required for compilation, including JUnit and Robocode. 
-•Compile the system. 
-If you cannot successfully compile the system, please contact the mailing list for help. 
-2.2 Verify installation¶Once compilation is successful, perform a "verification" of the system as follows: 
-% ant -f verify.build.xmlThis command will run JUnit, Checkstyle, PMD, JavaDoc, and FindBugs, and fail the build if any warnings are issued by these tools. It will also download these packages using Ivy. 
-If the verification does not succeed, then contact the mailing list for help before proceeding. 
-3.0 Development Guidelines¶Once you have verified your local installation of robocode-pmj-dacruzer, you are ready for development. We follow these development guidelines: 
-•We use Eclipse for development, and format the code using this format. 
-•For new features, please add an Issue that specifies what you plan to do. 
-•Please develop a JUnit test case (either before, during, or after) development of a new feature to ensure it works. 
-•Before committing changes, please make sure that "ant -f verify.build.xml" runs successfully. 
-
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+#summary How to use the prepackaged DaCruzer robot  #labels Featured    *Table of Contents*   <wiki:toc max_depth="3" />    = 1.0 Download =    Please download the latest distribution of !DaCruzer from the [http://code.google.com/p/robocode-pmj-dacruzer/downloads/list Downloads] page.    Then, unzip the distribution.     = 2.0 Install =    To install the prepackaged !DaCruzer robot, find the file named pmj.!DaCruzer`_`{version}.jar in the distribution (where {version} is the version of the robot).     Move that file to the robots/ directory of your Robocode installation.     You're done!
